--- a/LaRucheFront/src/app/app.component.scss
+++ b/LaRucheFront/src/app/app.component.scss
@@ -1,3 +1,42 @@
 /* Police */
 @import url('https://fonts.google.com/specimen/Poppins');
 @import url('https://fonts.cdnfonts.com/css/glacial-indifference-2');
+
+html, body {
+    height: 100%;
+  }
+  
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #page{
+    display: flex;
+    flex-wrap: nowrap;
+    height: 1080px;
+  }
+
+  #router {
+    flex-grow: 1;
+    /*display: flex;
+    justify-content: center;
+    align-items: center;*/
+    background-color: #EDE8EC ;
+    
+  }
+
+  .router{
+    flex-grow: 1;
+  }
+  
+  #footer {
+    flex-shrink: 0;
+  }
+  
+  #navbar {
+    flex-shrink: 0;
+    width: 20%;
+    order:-1;
+    background-color:#2b414f;
+  }
