--- a/LaRucheFront/src/app/navbar/navbar.component.scss
+++ b/LaRucheFront/src/app/navbar/navbar.component.scss
@@ -19,18 +19,18 @@ body
 /* permet de faire une div large sur le côté */
 #menu-container
 {
-  position: fixed;
+  /*position: fixed;
   top: 0;
   bottom : 0; 
-  left: 0;
+  left: 0;*/
   background-color:#2b414f;
-  width:18%;
+ // width:18%;
   display: flex;
   flex-direction: column;
   align-items: center;
   z-index: 100;
   font-family: 'Glacial Indifference';
-  font-size: 12;
+  font-size: 12; //marche pas 
 }
 
 /* contient les infos du menu, avec une marge par rapport à la div menu */
