--- a/LaRucheFront/src/app/connexion/connexion.component.html
+++ b/LaRucheFront/src/app/connexion/connexion.component.html
@@ -9,13 +9,13 @@
 		<img src='assets/navbar/logo-ss.png' alt="Image Description">
     <div class="login-form">
   			<form action="#" method="post" form [formGroup]="loginForm" (ngSubmit)="seConnecter()">
-  				<label for="username">Login:</label>
+  				<label for="username">Login :</label>
   				<input type="text" name="username" id="username" formControlName="login"><br>
-  				<label for="password">Mot de Passe :</label>
-  				<input type="password" name="password" id="password" formControlName="password"><br>
+				<label for="password">Mot de Passe :</label>
+  				<input type="password" name="password" id="password" formControlName="password">
+				  <span *ngIf="errorMessage" class="error">{{errorMessage}}</span>
   				<input type="submit" value="Se Connecter" [disabled]="loginForm.invalid"><br>
-            <a href="">Mot de passe oublié ?</a>
-  			</form>
+			</form>
   		</div>
     </div>
 </div>
