--- a/LaRucheFront/src/app/connexion/connexion.component.scss
+++ b/LaRucheFront/src/app/connexion/connexion.component.scss
@@ -53,7 +53,7 @@ max-width: 400px; /* Adjust as needed */
   max-width: 300px;
   text-align: left;
   position: relative;
-  font-family: 'Poppins', sans-serif;;
+  font-family: 'Poppins', sans-serif;
   margin-left: 50px; /* add margin-left to align with input box */
 }
 
@@ -74,7 +74,7 @@ max-width: 400px; /* Adjust as needed */
 
 .login-form input[type="submit"] {
   position: absolute;
-  bottom: calc(16%);;
+  bottom: calc(16%);
   height: 45px;
   right: 20px;
   border : none;
@@ -88,7 +88,7 @@ max-width: 400px; /* Adjust as needed */
 
 .login-form a {
   position: absolute;
-  bottom: calc(9%);;
+  bottom: calc(9%);
   right: 20px;
   margin-top: 20px;
   font-size: 14px;
@@ -96,6 +96,13 @@ max-width: 400px; /* Adjust as needed */
   text-decoration: none;
   position: absolute;
   font-family: 'Poppins', sans-serif;
+}
+
+.error {
+  color: #F58F29;
+  font-family: 'Poppins', sans-serif;
+  font-size: 12px;
+  position:initial;
 }
 
 .wrapper {
