--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -22,19 +22,19 @@
   
   
             <ul>
-           <div class="nav-element" (mouseenter)="sourisA=true" (mouseleave)="sourisA=false">
-              <li class="linkAccueil">
-                <img src="assets/navbar/home-b.png" alt="logo" class="iconesMenu" *ngIf="sourisA==false">
-                <img src="assets/navbar/home-o.png" alt="logo" class="iconesMenu" *ngIf="sourisA==true">
-                <a href="#" class="alignIconeWithText">Accueil</a>
-              </li>
-            </div>
+              <div class="nav-element" (mouseenter)="sourisA=true" (mouseleave)="sourisA=false">
+                <li class="linkAccueil">
+                      <img src="assets/navbar/home-b.png" alt="logo" class="iconesMenu" *ngIf="sourisA==false">
+                      <img src="assets/navbar/home-o.png" alt="logo" class="iconesMenu" *ngIf="sourisA==true">
+                      <a [routerLink]="['gestionnaire']" routerLinkActive="active" class="alignIconeWithText">Accueil</a>
+                </li>
+              </div>              
   
             <div class="nav-element" (mouseenter)="sourisB=true" (mouseleave)="sourisB=false">
               <li class="linkCompte">
                 <img src="assets/navbar/compte-b.png" alt="logo" class="iconesMenu" *ngIf="sourisB==false">
                 <img src="assets/navbar/compte-o.png" alt="logo" class="iconesMenu" *ngIf="sourisB==true">
-                <a href="#" class="alignIconeWithText">Mon compte</a>
+                <a [routerLink]="['gestionnaire/compte']" routerLinkActive="active" class="alignIconeWithText">Mon compte</a>
               </li>
             </div>
   
@@ -48,8 +48,8 @@
                     <input id="menu1" type="checkbox" />
                     <ul class="sub">
                       <li class="sousMenus"><a [routerLink]="['gestionnaire/ruche']" routerLinkActive="active">Afficher les ruches</a></li>
-                      <li class="sousMenus"><a href="#">Évaluer le nourrissage</a></li>
-                      <li class="sousMenus"><a href="#">Évaluer les populations</a></li>
+                      <li class="sousMenus"><a [routerLink]="['gestionnaire/nourrissage']" routerLinkActive="active">Évaluer le nourrissage</a></li>
+                      <li class="sousMenus"><a [routerLink]="['gestionnaire/populations']" routerLinkActive="active">Évaluer les populations</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -61,7 +61,7 @@
               <li class="linkRecoltes">
                 <img src="assets/navbar/miel-b.png" alt="logo" class="iconesMenu" *ngIf="sourisD==false">
                 <img src="assets/navbar/miel-o.png" alt="logo" class="iconesMenu" *ngIf="sourisD==true">
-                <a href="#" class="alignIconeWithText">Les récoltes</a>
+                <a [routerLink]="['gestionnaire/recoltes']" routerLinkActive="active" class="alignIconeWithText">Les récoltes</a>
               </li>
             </div>
   
@@ -76,8 +76,8 @@
                     <label for="menu2" class="alignIconeWithText">Gestion des utilisateurs &#x25BE;</label>
                     <input id="menu2" type="checkbox" />
                     <ul class="sub">
-                      <li class="sousMenus"><a href="#">Récolteurs</a></li>
-                      <li class="sousMenus"><a href="#">Clients</a></li>
+                      <li class="sousMenus"><a [routerLink]="['gestionnaire/recolteurs']" routerLinkActive="active">Récolteurs</a></li>
+                      <li class="sousMenus"><a [routerLink]="['gestionnaire/clients']" routerLinkActive="active">Clients</a></li>
                     </ul>
                     </li>
                   </ul>
@@ -87,7 +87,7 @@
                 <li class="linkDeco">
                   <img src="assets/navbar/bee-b.png" alt="logo" class="iconesMenu" *ngIf="sourisF==false">
                   <img src="assets/navbar/bee-o.png" alt="logo" class="iconesMenu" *ngIf="sourisF==true">
-                  <a href="#" class="alignIconeWithText">Déconnexion</a>
+                  <a [routerLink]="['connexion']" routerLinkActive="active" class="alignIconeWithText">Déconnexion</a>
                 </li>
               </div>
               </ul>
