--- a/LaRucheFront/src/app/accueil/accueil.component.scss
+++ b/LaRucheFront/src/app/accueil/accueil.component.scss
@@ -69,6 +69,8 @@
   justify-content: center; /* change this line to center align */
   flex-basis: 50%;
   text-align: center;
+  font-family: 'Glacial Indifference', sans-serif;
+  font-weight: bold;
 }
 
 .right{
