Erreur Lina (déso)

--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -1,11 +1,10 @@
-
 <html>
 
 <body>
 	<main>
-		<div class="body_page">
+<div class="body_page">
 
-			<div class="home_message_top">
+		<div class="home_message_top">
 
 		<div class="home_box_message">
 			<h2>Bienvenue sur votre application un-bee-livable !</h2>
@@ -43,19 +42,18 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			
 
 
 
 			<div class="home_button_bot">
 
-
-		<div class="box-container">
-			<a routerLink="gestionnaire/ruche"  class="img_box">
-  			<img src="/assets/home_gestionnaire/miel-b.png">
-			</a>
-			<button routerLink="gestionnaire/ruche" id ="button_bot">Voir mes ruches</button>
-		</div>
+				<div class="box-container">
+					<a routerLink="gestionnaire/ruche/ma-ruche" class="img_box">
+						<img src="/assets/home_gestionnaire/miel-b.png">
+					</a>
+					<button routerLink="gestionnaire/ruche/ma-ruche" id="button_bot">Voir mes ruches</button>
+				</div>
 
 				<div class="box-container">
 					<a routerLink="gestionnaire/ruche/ma-production" class="img_box">
@@ -75,8 +73,6 @@
 
 
 			</div>
-
-		</div>
 	</main>
 </body>
 
