--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -38,7 +38,7 @@
               </li>
             </div>
 
-            <div class="nav-element" (mouseenter)="sourisB=true" (mouseleave)="sourisB=false">
+            <div class="nav-element" (mouseenter)="sourisC=true" (mouseleave)="sourisC=false">
               <li class="linkCompte">
                 <img src="assets/navbar/ruche-b.png" alt="logo" class="iconesMenu" *ngIf="sourisC==false">
                 <img src="assets/navbar/ruche-o.png" alt="logo" class="iconesMenu" *ngIf="sourisC==true">
